--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="style.css">
+        <script src="jquery-3.5.1.min.js"></script>
     </head>
     <body>
         <header class="nav">
@@ -19,18 +20,13 @@
                 </nav>
             </div>
         </header>
-            <div class="heroImg">
-                <img src="Photo.jpg" alt="Portrait" width="500">
+            <div class="heading">
                 <p>Hello, I'm Maya. UX Designer, strategist, and observer.</p>
-                <button>Download Resume</button>
+                <button id="button1">My Work</button>
             </div>
-            <footer>
-                <ul>
-                    <li class="inline-block">about</li>
-                    <li class="inline-block">work</li>
-                    <li class="inline-block">resume</li>
-                    <li class="inline-block">contact</li>
-                </ul>
+            <footer id=footer>
+                <h2>Get in Touch</h2>
             </footer>
     </body>
+    <script src="js/index.js"></script>
 </html>
