--- a/html/index.html
+++ b/html/index.html
@@ -10,23 +10,19 @@
         <header class="nav">
             <div class="navigation logo">
                 <img src="MK Logo.png" alt="MK logo" width="60">
-                <nav class="navigation">
-                    <ul>
-                        <li class="inline-block">about</li>
-                        <li class="inline-block">work</li>
-                        <li class="inline-block">resume</li>
-                        <li class="inline-block">contact</li>
-                    </ul>
-                </nav>
             </div>
+            <div class="topnav">
+                <a href="#work">Work</a>
+                <a href="#about">About</a>
+                <a href="#resume">Resume</a>
+                <button id=button2>Contact</button>
+              </div>
         </header>
             <div class="heading">
-                <p>Hello, I'm Maya. UX Designer, strategist, and observer.</p>
+                <h2>Hello, I'm Maya. UX Designer, strategist, and observer.</h2>
+                <p>Currently working as a design strategist in NYC. My specialies include user research, graphic design, and storytelling.</p>
                 <button id="button1">My Work</button>
             </div>
-            <footer id=footer>
-                <h2>Get in Touch</h2>
-            </footer>
-    </body>
-    <script src="js/index.js"></script>
+        </body>
+        <script src="js/index.js"></script>
 </html>
